@@ -1,4 +1,5 @@
 Serf ... []
+  Fix socket address family issue when opening a connection to a proxy.
   Build with bundled apr and apr-util VPATH builds.
   Build with bundled OpenSSL builds.
 
